.provarCaches/00D5f000005vwGkEAI/objects/rstkf__glstmtntryd__c.object
<CustomObject>
    <description>glstmtntryd__c</description>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__glstmtntryd_glstmtntryh__r.rstkf__externalid__c &amp; &apos;_&apos; &amp;  TEXT( rstkf__glstmtntryd_line__c )</formula>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__glstmtntryd_glstmtntryh__r.Name  &amp; &apos;-&apos; &amp;  TEXT( rstkf__glstmtntryd_line__c )</formula>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glstmtntryd_cramt__c</fullName>
        <label>Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glstmtntryd_dramt__c</fullName>
        <label>Debit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glstmtntryd_glacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Statement Entry Details</relationshipLabel>
        <relationshipName>glstmtntryds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glstmtntryd_glstmtntryh__c</fullName>
        <label>Statement Entry Header</label>
        <referenceTo>rstkf__glstmtntryh__c</referenceTo>
        <relationshipLabel>Statement Entry Details</relationshipLabel>
        <relationshipName>glstmtntryds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__glstmtntryd_line__c</fullName>
        <label>Line Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Statement Entry Detail</label>
    <listViews>
        <fullName>rstkf__RS_Statement_Entry_Details</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glstmtntryd_glstmtntryh__c</columns>
        <columns>rstkf__glstmtntryd_line__c</columns>
        <columns>rstkf__glstmtntryd_glacct__c</columns>
        <columns>rstkf__glstmtntryd_dramt__c</columns>
        <columns>rstkf__glstmtntryd_cramt__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstkf__triggeroptions__c</columns>
        <filterScope>Everything</filterScope>
        <label>Statement Entry Details</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Statement Entry Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>